fixed anchor positions for section jumps

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,3 +8,13 @@
     flex-direction: column;
     align-items: center;
 }
+
+.anchor {
+    visibility: hidden;
+}
+
+.projects {
+    position: relative;
+    top: -60px;
+    border: 1px solid red;
+}
